fix: text-align for mobile

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ ul li a {
     justify-content: center;
     color: white;
     text-decoration: none;
+    text-align: center;
 }
 
 
